# my-engine0

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  runcode.cmd
engine/: CMakeLists.txt
engine/core_application/content/prog/: application.ts  interop.ts  package.json  tsconfig.json  watch.cmd
engine/core_application/content/prog/@types/: application.d.ts
engine/core_application/include/my/app/: application.h  application_delegate.h
engine/core_application/prog/: application.ts  interop.ts
engine/core_application/prog/@types/core/: application.d.ts  index.d.ts  natives.d.ts
engine/core_application/prog/preload/: logging.ts
engine/core_application/src/: CMakeLists.txt  pch.h
engine/core_application/src/app/: application.cpp  application_impl.cpp  application_impl.h  logging_service.cpp  logging_service.h
engine/kernel/: CMakeLists.txt
engine/kernel/include/my/app/: property_container.h
engine/kernel/include/my/async/: async_timer.h  cpp_coroutine.h  executor.h  multi_task_source.h  task.h  task_base.h  task_collection.h  thread_pool_executor.h  work_queue.h
engine/kernel/include/my/containers/: intrusive_list.h
engine/kernel/include/my/debug/: debugger.h  source_map.h
engine/kernel/include/my/diag/: assert.h  assert_handler.h  check.h  check_handler.h  common_errors.h  error.h  log_filters.h  log_sinks.h  log_subscribers.h  logging.h  logging_base.h  source_info.h
engine/kernel/include/my/dispatch/: class_descriptor.h  class_descriptor_builder.h  closure_value.h  dispatch.h  dispatch_args.h  dynamic_object.h  dynamic_object_impl.h
engine/kernel/include/my/io/: asset_pack.h  asset_pack_file_system.h  async_stream.h  file_system.h  fs_path.h  io_constants.h  memory_stream.h  nau_container.h  special_paths.h  stream.h  stream_utils.h  virtual_file_system.h
engine/kernel/include/my/kernel/: kernel_config.h
engine/kernel/include/my/math/: math.h
engine/kernel/include/my/memory/: allocator.h  buffer.h  fixed_size_block_allocator.h  host_memory.h  mem_allocator.h  mem_base.h  runtime_stack.h  singleton_memop.h
engine/kernel/include/my/meta/: attribute.h  class_info.h  common_attributes.h  function_info.h  runtime_attribute.h
engine/kernel/include/my/module/: module.h  module_api.h  module_manager.h
engine/kernel/include/my/network/: address.h  http_parser.h  network.h
engine/kernel/include/my/rtti/: ptr.h  rtti_impl.h  rtti_object.h  rtti_utils.h  type_info.h  weak_ptr.h
engine/kernel/include/my/runtime/: async_disposable.h  disposable.h
engine/kernel/include/my/script/: realm.h  script_manager.h
engine/kernel/include/my/serialization/: json.h  json_utils.h  runtime_value.h  runtime_value_builder.h  runtime_value_events.h  serialization.h
engine/kernel/src/: CMakeLists.txt  pch.h
engine/kernel/src/app/: property_container_impl.cpp  property_container_impl.h
engine/kernel/src/async/: core_task_impl.cpp  core_task_impl.h  executor.cpp  task.cpp  task_collection.cpp  thread_pool_executor.cpp  timer_manager.cpp  work_queue.cpp
engine/kernel/src/debug/: source_map.cpp
engine/kernel/src/diag/: assert.cpp  check.cpp  error.cpp
engine/kernel/src/io/: directory_iterator.cpp  fs_path.cpp  memory_stream.cpp  nau_container.cpp  stream.cpp  virtual_file_system_impl.cpp  virtual_file_system_impl.h  zip_archive_file_system.cpp
engine/kernel/src/memory/: allocator.cpp  buffer.cpp  crt_allocator.cpp  crt_allocator.h  fixed_size_block_allocator.cpp  host_memory.cpp  mem_allocator.cpp  runtime_stack.cpp
engine/kernel/src/meta/: runtime_attribute.cpp
engine/kernel/src/module/: module_manager.cpp  module_utils.cpp  shared_library.cpp  shared_library.h
engine/kernel/src/network/: address_impl.cpp  address_impl.h  disposable_runtime_object.cpp  disposable_runtime_object.h  http_parser.cpp  listener.cpp  listener.h  network.cpp  stream_socket.cpp  stream_socket.h  tcp.cpp  tcp.h
engine/kernel/src/rtti/: rtti_impl.cpp  type_info.cpp
engine/kernel/src/runtime/: kernel_runtime.cpp  kernel_runtime_impl.cpp  kernel_runtime_impl.h  runtime_executor.cpp  runtime_executor.h  runtime_object_registry.cpp  uv_handle.cpp  uv_handle.h  uv_utils.cpp  uv_utils.h
engine/kernel/src/script/: script_common.cpp
engine/kernel/src/serialization/: native_object.cpp  runtime_value.cpp
engine/kernel/src/service/: service_provider_impl.cpp  service_provider_impl.h
engine/kernel/src/threading/: barrier.cpp  event.cpp  set_thread_name.cpp
engine/kernel/src/utils/: base64.cpp  cancellation.cpp  result.cpp  runtime_enum.cpp  stop_watch.cpp  string_utils.cpp
engine/kernel/tests/test_common_lib/: CMakeLists.txt  check_guard.cpp  pch.h  runtime_guard.cpp
engine/kernel/tests/test_kernel_base/: CMakeLists.txt  main.cpp  pch.h  test_attributes.cpp  test_base64_vlq.cpp  test_cancellation.cpp  test_class_info.cpp  test_enum_reflection.cpp  test_error.cpp  test_functor.cpp  test_intrusive_list.cpp  test_logging.cpp  test_result.cpp  test_runtime_attributes.cpp  test_scope_guard.cpp  test_stdallocator.cpp  test_string_utils.cpp  test_type_list.cpp  test_typed_flag.cpp  test_uid.cpp  test_utils.cpp
engine/modules/application/src/: CMakeLists.txt  pch.h
engine/modules/platform_app/: CMakeLists.txt
engine/modules/platform_app/src/: CMakeLists.txt
engine/modules/script_lua/: CMakeLists.txt
engine/modules/script_lua/src/: CMakeLists.txt  lua_realm.cpp  lua_realm.h  lua_script_manager.cpp  lua_script_manager.h  lua_script_module.cpp  pch.h
engine/modules/script_lua/test_module_script_lua/: CMakeLists.txt  in_mem_filesystem.cpp  in_mem_filesystem.h  pch.h  test_realm.cpp
engine/mylibs/: CMakeLists.txt
engine/mylibs/lua_toolkit/: CMakeLists.txt
engine/mylibs/lua_toolkit/src/: CMakeLists.txt  chunk_loader.h  lua_internals.cpp  lua_internals.h  lua_utils.cpp  pch.h
samples/scripts_basic/: CMakeLists.txt  package.json  tsconfig.json
samples/scripts_basic/content/prog/: my_component.ts  package.json  tsconfig.json
samples/scripts_basic/prog/: my_component.ts
samples/scripts_basic/src/: main.cpp
(+218 files in other folders)
